<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phoneEntryTip"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="308dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goToWeb"
        android:text="@string/learnMore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uparrow" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/signInButton"
        app:backgroundTint="@color/mint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEntry" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="66dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/help_about_phone_number"
        android:focusable="true"
        android:onClick="goToHelp"
        app:backgroundTint="@color/mint"
        app:layout_constraintBottom_toTopOf="@+id/signIn"
        app:layout_constraintStart_toEndOf="@+id/textEntry"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <ImageView
        android:id="@+id/icharmony_logo"
        android:layout_width="266dp"
        android:layout_height="213dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goToWeb"
        app:layout_constraintBottom_toTopOf="@+id/uparrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_trans" />

    <ImageView
        android:id="@+id/uparrow"
        android:layout_width="46dp"
        android:layout_height="0dp"
        android:onClick="goToWeb"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/icharmony_logo"
        app:layout_constraintStart_toStartOf="@+id/icharmony_logo"
        app:layout_constraintTop_toBottomOf="@+id/icharmony_logo"
        app:srcCompat="@android:drawable/arrow_up_float" />

</androidx.constraintlayout.widget.ConstraintLayout>