<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:contentDescription="@string/skip"
        android:src="@android:drawable/ic_media_previous"
        android:visibility="invisible"
        app:backgroundTint="@color/mint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:focusable="true" />

    <TextView
        android:id="@+id/surveyTitle"
        android:layout_width="117dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="18dp"
        android:text="@string/survey"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center_horizontal" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:clickable="true"
        android:contentDescription="@string/skip"
        android:src="@android:drawable/ic_media_next"
        app:backgroundTint="@color/mint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:focusable="true" />

    <TextView
        android:id="@+id/question"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/greeting"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answerTextField"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/questionHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="432dp"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_help"
        app:backgroundTint="@color/mint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <RadioGroup
        android:id="@+id/answerButtons"
        android:layout_width="411dp"
        android:layout_height="314dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/answerButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_placeholder" />

        <RadioButton
            android:id="@+id/answerButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_placeholder" />

        <RadioButton
            android:id="@+id/answerButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_placeholder" />

        <RadioButton
            android:id="@+id/answerButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_placeholder" />

        <RadioButton
            android:id="@+id/answerButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_placeholder" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/prefBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/answer_preference_placeholder"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/prefBox2"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/prefBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/answer_preference_placeholder"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/prefBox3"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/prefBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:text="@string/answer_preference_placeholder"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/prefBox4"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/prefBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/answer_preference_placeholder"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/prefBox5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/prefBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="44dp"
        android:text="@string/answer_preference_placeholder"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>